--- a/SchoolDiarySystem/Views/Teacher/Index.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Index.cshtml
@@ -1,17 +1,22 @@
-﻿@{ Layout = null; }
+﻿
+@{
+    Layout = null;
+}
 @using SchoolDiarySystem.Models
+@model IEnumerable<Teachers>
+
 
 <!doctype html>
 <html class="no-js" lang="">
 
 
-<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:09:34 GMT -->
+<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/all-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>School Diary Management</title>
+    <title>School Diary Management | Add Teacher</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -26,10 +31,12 @@
     <link rel="stylesheet" href="~/Content/css/all.min.css">
     <!-- Flaticon CSS -->
     <link rel="stylesheet" href="~/Content/fonts/flaticon.css">
-    <!-- Full Calender CSS -->
-    <link rel="stylesheet" href="~/Content/css/fullcalendar.min.css">
     <!-- Animate CSS -->
     <link rel="stylesheet" href="~/Content/css/animate.min.css">
+    <!-- Select 2 CSS -->
+    <link rel="stylesheet" href="~/Content/css/select2.min.css">
+    <!-- Date Picker CSS -->
+    <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/Content/style.css">
     <!-- Modernize js -->
@@ -246,119 +253,115 @@
             <div class="dashboard-content-one">
                 <!-- Breadcubs Area Start Here -->
                 <div class="breadcrumbs-area">
-                    <h3>Admin Dashboard</h3>
+                    <h3>Teacher</h3>
                     <ul>
                         <li>
-                            <a href="~/Content/index-2.html">Home</a>
+                            <a href="index-2.html">Home</a>
                         </li>
-                        <li>Admin</li>
+                        <li>All Teachers</li>
                     </ul>
                 </div>
                 <!-- Breadcubs Area End Here -->
-                <!-- Dashboard summery Start Here -->
-                <div class="row gutters-20">
-                    <div class="col-xl-3 col-sm-6 col-12">
-                        <div class="dashboard-summery-one mg-b-20">
-                            <div class="row align-items-center">
-                                <div class="col-6">
-                                    <div class="item-icon bg-light-green ">
-                                        <i class="flaticon-classmates text-green"></i>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="item-content">
-                                        <div class="item-title">Students</div>
-                                        <div class="item-number"><span class="counter" data-num="150000">1,50,000</span></div>
-                                    </div>
-                                </div>
+                <!-- Teacher Table Area Start Here -->
+                <div class="card height-auto">
+                    <div class="card-body">
+                        <div class="heading-layout1">
+                            <div class="item-title">
+                                <h3>All Teachers Data</h3>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 col-12">
-                        <div class="dashboard-summery-one mg-b-20">
-                            <div class="row align-items-center">
-                                <div class="col-6">
-                                    <div class="item-icon bg-light-blue">
-                                        <i class="flaticon-multiple-users-silhouette text-blue"></i>
-                                    </div>
+                        <form class="mg-b-20">
+                            <div class="row gutters-8">
+                                <div class="col-4-xxxl col-xl-4 col-lg-3 col-12 form-group">
+                                    <input type="text" placeholder="Search by Name ..." class="form-control">
                                 </div>
-                                <div class="col-6">
-                                    <div class="item-content">
-                                        <div class="item-title">Teachers</div>
-                                        <div class="item-number"><span class="counter" data-num="2250">2,250</span></div>
-                                    </div>
+                                <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
+                                    <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 col-12">
-                        <div class="dashboard-summery-one mg-b-20">
-                            <div class="row align-items-center">
-                                <div class="col-6">
-                                    <div class="item-icon bg-light-yellow">
-                                        <i class="flaticon-couple text-orange"></i>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="item-content">
-                                        <div class="item-title">Parents</div>
-                                        <div class="item-number"><span class="counter" data-num="5690">5,690</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Dashboard summery End Here -->
-                <!-- Dashboard Content Start Here -->
-                <div class="row gutters-20">
-                    <div class="col-12 col-xl-6 col-3-xxxl">
-                        <div class="card dashboard-card-three pd-b-20">
-                            <div class="card-body">
-                                <div class="heading-layout1">
-                                    <div class="item-title">
-                                        <h3>Students</h3>
-                                    </div>
-                                </div>
-                                <div class="doughnut-chart-wrap">
-                                    <canvas id="student-doughnut-chart" width="100" height="300"></canvas>
-                                </div>
-                                <div class="student-report">
-                                    <div class="student-count pseudo-bg-blue">
-                                        <h4 class="item-title">Female Students</h4>
-                                        <div class="item-number">45,000</div>
-                                    </div>
-                                    <div class="student-count pseudo-bg-yellow">
-                                        <h4 class="item-title">Male Students</h4>
-                                        <div class="item-number">5,000</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-xl-6 col-4-xxxl">
-                        <div class="card dashboard-card-four pd-b-20">
-                            <div class="card-body">
-                                <div class="heading-layout1">
-                                    <div class="item-title">
-                                        <h3>Event Calender</h3>
-                                    </div>
-                                </div>
-                                <div class="calender-wrap">
-                                    <div id="fc-calender" class="fc-calender"></div>
-                                </div>
-                            </div>
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table display data-table text-nowrap">
+                                <thead>
+                                    <tr>
+                                        <th>@Html.DisplayNameFor(m => m.FirstName)</th>
+                                        <th>@Html.DisplayNameFor(m => m.LastName)</th>
+                                        <th>@Html.DisplayNameFor(m => m.Gender)</th>
+                                        <th>@Html.DisplayNameFor(m => m.City)</th>
+                                        <th>@Html.DisplayNameFor(m => m.Qualification)</th>
+                                        <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
+                                        <th>@Html.DisplayNameFor(m => m.Email)</th>
+                                        <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                @*<tfoot>
+                            <tr>
+                                <th>@Html.DisplayNameFor(m => m.FirstName)</th>
+                                <th>@Html.DisplayNameFor(m => m.LastName)</th>
+                                <th>@Html.DisplayNameFor(m => m.Gender)</th>
+                                <th>@Html.DisplayNameFor(m => m.City)</th>
+                                <th>@Html.DisplayNameFor(m => m.Qualification)</th>
+                                <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
+                                <th>@Html.DisplayNameFor(m => m.Email)</th>
+                                <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
+                                <th></th>
+                            </tr>
+                        </tfoot>*@
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(m => item.FirstName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.LastName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Gender)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.City)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Qualification)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.DayofBirth)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Email)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.PhoneNo)
+                                            </td>
+
+                                            <td>
+                                                @Html.ActionLink("Update", "Update", new { id = item.TeacherID })
+                                                @Html.ActionLink("Details", "Details", new { id = item.TeacherID })
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.TeacherID })
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
-                <!-- Social Media End Here -->
-                <!-- Footer Area Start Here -->
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <!-- Teacher Table Area End Here -->
                 <footer class="footer-wrap-layout1">
-                    <div class="copyright">
-                        © Copyrights <a href="#">Arbi, Erika, Vlera</a> 2020. All rights reserved.</a>
-                    </div>
+                    <div class="copyright">© Copyrights <a href="#">Arbi, Erika, Vlera</a> 2020. All rights reserved.</a></div>
                 </footer>
-                <!-- Footer Area End Here -->
             </div>
         </div>
         <!-- Page Area End Here -->
@@ -371,23 +374,19 @@
     <script src="~/Content/js/popper.min.js"></script>
     <!-- Bootstrap js -->
     <script src="~/Content/js/bootstrap.min.js"></script>
-    <!-- Counterup Js -->
-    <script src="~/Content/js/jquery.counterup.min.js"></script>
-    <!-- Moment Js -->
-    <script src="~/Content/js/moment.min.js"></script>
-    <!-- Waypoints Js -->
-    <script src="~/Content/js/jquery.waypoints.min.js"></script>
+    <!-- Select 2 Js -->
+    <script src="~/Content/js/select2.min.js"></script>
+    <!-- Date Picker Js -->
+    <script src="~/Content/js/datepicker.min.js"></script>
+    <!-- Smoothscroll Js -->
+    <script src="~/Content/js/jquery.smoothscroll.min.html"></script>
     <!-- Scroll Up Js -->
     <script src="~/Content/js/jquery.scrollUp.min.js"></script>
-    <!-- Full Calender Js -->
-    <script src="~/Content/js/fullcalendar.min.js"></script>
-    <!-- Chart Js -->
-    <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
     <script src="~/Content/js/main.js"></script>
 
 </body>
 
 
-<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:09:52 GMT -->
+<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/all-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
 </html>
