--- a/SchoolDiarySystem/Views/Teacher/Update.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Update.cshtml
@@ -1,17 +1,20 @@
-﻿@{ Layout = null; }
+﻿@{
+    Layout = null;
+}
 @using SchoolDiarySystem.Models
+@model Teachers
 
 <!doctype html>
 <html class="no-js" lang="">
 
 
-<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:09:34 GMT -->
+<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/add-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>School Diary Management</title>
+    <title>School Diary Management | Add Teacher</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -26,10 +29,12 @@
     <link rel="stylesheet" href="~/Content/css/all.min.css">
     <!-- Flaticon CSS -->
     <link rel="stylesheet" href="~/Content/fonts/flaticon.css">
-    <!-- Full Calender CSS -->
-    <link rel="stylesheet" href="~/Content/css/fullcalendar.min.css">
     <!-- Animate CSS -->
     <link rel="stylesheet" href="~/Content/css/animate.min.css">
+    <!-- Select 2 CSS -->
+    <link rel="stylesheet" href="~/Content/css/select2.min.css">
+    <!-- Date Picker CSS -->
+    <link rel="stylesheet" href="~/Content/css/datepicker.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/Content/style.css">
     <!-- Modernize js -->
@@ -145,12 +150,12 @@
                             </a>
                             <ul class="nav sub-group-menu">
                                 <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Teacher")" class="nav-link">
+                                    <a href="all-teacher.html" class="nav-link">
                                         <i class="fas fa-angle-right"></i>All Teachers
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Teacher")" class="nav-link">
+                                    <a href="add-teacher.html" class="nav-link">
                                         <i class="fas fa-angle-right"></i>Add Teacher
                                     </a>
                                 </li>
@@ -246,119 +251,89 @@
             <div class="dashboard-content-one">
                 <!-- Breadcubs Area Start Here -->
                 <div class="breadcrumbs-area">
-                    <h3>Admin Dashboard</h3>
+                    <h3>Teacher</h3>
                     <ul>
                         <li>
-                            <a href="~/Content/index-2.html">Home</a>
+                            <a href="index-2.html">Home</a>
                         </li>
-                        <li>Admin</li>
+                        <li>Add New Teacher</li>
                     </ul>
                 </div>
                 <!-- Breadcubs Area End Here -->
-                <!-- Dashboard summery Start Here -->
-                <div class="row gutters-20">
-                    <div class="col-xl-3 col-sm-6 col-12">
-                        <div class="dashboard-summery-one mg-b-20">
-                            <div class="row align-items-center">
-                                <div class="col-6">
-                                    <div class="item-icon bg-light-green ">
-                                        <i class="flaticon-classmates text-green"></i>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="item-content">
-                                        <div class="item-title">Students</div>
-                                        <div class="item-number"><span class="counter" data-num="150000">1,50,000</span></div>
-                                    </div>
-                                </div>
+                <!-- Add New Teacher Area Start Here -->
+                <div class="card height-auto">
+                    <div class="card-body">
+                        <div class="heading-layout1">
+                            <div class="item-title">
+                                <h3>Add New Teacher</h3>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 col-12">
-                        <div class="dashboard-summery-one mg-b-20">
-                            <div class="row align-items-center">
-                                <div class="col-6">
-                                    <div class="item-icon bg-light-blue">
-                                        <i class="flaticon-multiple-users-silhouette text-blue"></i>
+                        @using (Html.BeginForm("Update", "Teacher", FormMethod.Post))
+                        {
+                            <form class="new-added-form">
+                                <div class="row">
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>First Name *</label>
+                                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname" })
+                                        @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Last Name *</label>
+                                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name...", id = "lastname" })
+                                        @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Gender *</label>
+                                        @Html.DropDownList("GenderID", null, new { @class = "select2" })
+                                        @Html.ValidationMessageFor(m => m.Gender, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Date Of Birth *</label>
+                                        @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "dob" })
+                                        @Html.ValidationMessageFor(m => m.DayofBirth, "", new { @class = "text-danger" })
+                                        <i class="far fa-calendar-alt"></i>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>City *</label>
+                                        @Html.TextBoxFor(m => m.City, new { @class = "form-control", placeholder = "Write city...", id = "city" })
+                                        @Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Qualification *</label>
+                                        @Html.TextBoxFor(m => m.Qualification, new { @class = "form-control", placeholder = "Write qualification...", id = "qualification" })
+                                        @Html.ValidationMessageFor(m => m.Qualification, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>E-Mail *</label>
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "example@mail.com", id = "email" })
+                                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Phone Number *</label>
+                                        @Html.TextBoxFor(m => m.PhoneNo, new { @class = "form-control", placeholder = "+383 49 700 700", id = "phoneno" })
+                                        @Html.ValidationMessageFor(m => m.PhoneNo, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-12 form-group mg-t-8">
+                                        <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
                                     </div>
                                 </div>
-                                <div class="col-6">
-                                    <div class="item-content">
-                                        <div class="item-title">Teachers</div>
-                                        <div class="item-number"><span class="counter" data-num="2250">2,250</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 col-12">
-                        <div class="dashboard-summery-one mg-b-20">
-                            <div class="row align-items-center">
-                                <div class="col-6">
-                                    <div class="item-icon bg-light-yellow">
-                                        <i class="flaticon-couple text-orange"></i>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="item-content">
-                                        <div class="item-title">Parents</div>
-                                        <div class="item-number"><span class="counter" data-num="5690">5,690</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Dashboard summery End Here -->
-                <!-- Dashboard Content Start Here -->
-                <div class="row gutters-20">
-                    <div class="col-12 col-xl-6 col-3-xxxl">
-                        <div class="card dashboard-card-three pd-b-20">
-                            <div class="card-body">
-                                <div class="heading-layout1">
-                                    <div class="item-title">
-                                        <h3>Students</h3>
-                                    </div>
-                                </div>
-                                <div class="doughnut-chart-wrap">
-                                    <canvas id="student-doughnut-chart" width="100" height="300"></canvas>
-                                </div>
-                                <div class="student-report">
-                                    <div class="student-count pseudo-bg-blue">
-                                        <h4 class="item-title">Female Students</h4>
-                                        <div class="item-number">45,000</div>
-                                    </div>
-                                    <div class="student-count pseudo-bg-yellow">
-                                        <h4 class="item-title">Male Students</h4>
-                                        <div class="item-number">5,000</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-xl-6 col-4-xxxl">
-                        <div class="card dashboard-card-four pd-b-20">
-                            <div class="card-body">
-                                <div class="heading-layout1">
-                                    <div class="item-title">
-                                        <h3>Event Calender</h3>
-                                    </div>
-                                </div>
-                                <div class="calender-wrap">
-                                    <div id="fc-calender" class="fc-calender"></div>
-                                </div>
-                            </div>
-                        </div>
+                            </form>
+                        }
                     </div>
                 </div>
-                <!-- Social Media End Here -->
-                <!-- Footer Area Start Here -->
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <!-- Add New Teacher Area End Here -->
                 <footer class="footer-wrap-layout1">
-                    <div class="copyright">
-                        © Copyrights <a href="#">Arbi, Erika, Vlera</a> 2020. All rights reserved.</a>
-                    </div>
+                    <div class="copyright">© Copyrights <a href="#">Arbi, Erika, Vlera</a> 2020. All rights reserved.</a></div>
                 </footer>
-                <!-- Footer Area End Here -->
             </div>
         </div>
         <!-- Page Area End Here -->
@@ -371,23 +346,19 @@
     <script src="~/Content/js/popper.min.js"></script>
     <!-- Bootstrap js -->
     <script src="~/Content/js/bootstrap.min.js"></script>
-    <!-- Counterup Js -->
-    <script src="~/Content/js/jquery.counterup.min.js"></script>
-    <!-- Moment Js -->
-    <script src="~/Content/js/moment.min.js"></script>
-    <!-- Waypoints Js -->
-    <script src="~/Content/js/jquery.waypoints.min.js"></script>
+    <!-- Select 2 Js -->
+    <script src="~/Content/js/select2.min.js"></script>
+    <!-- Date Picker Js -->
+    <script src="~/Content/js/datepicker.min.js"></script>
+    <!-- Smoothscroll Js -->
+    <script src="~/Content/js/jquery.smoothscroll.min.html"></script>
     <!-- Scroll Up Js -->
     <script src="~/Content/js/jquery.scrollUp.min.js"></script>
-    <!-- Full Calender Js -->
-    <script src="~/Content/js/fullcalendar.min.js"></script>
-    <!-- Chart Js -->
-    <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
     <script src="~/Content/js/main.js"></script>
 
 </body>
 
 
-<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:09:52 GMT -->
+<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/add-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
 </html>
